[project]
name = "python-structures-project"
version = "0.1.0"
description = ""
authors = [
    {name = "PleeTNT",email = "prestolee0428@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_structures_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
